<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_to_reload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_loading_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_item_shimmer" />

                <include layout="@layout/layout_item_shimmer" />

                <include layout="@layout/layout_item_shimmer" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMovieList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_error_load_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="error_anim_firstload.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/error_load_movie_data"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="76dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading_anim_bottom.json"
            app:lottie_loop="true" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_show_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/color_primary"
            android:text="@string/favorite_movie"
            android:textColor="@color/white"
            app:icon="@drawable/iv_favorite_solid"
            app:iconTint="@color/white"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
